Update graal demo to newest Micronaut and Gradle