@@ -1,11 +1,12 @@
 package github.scraper.business;
 
+import github.scraper.rest.dto.ProjectDto;
 import github.scraper.rest.dto.ProjectsDto;
 import io.micronaut.retry.annotation.Fallback;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.Collections;
+import java.util.List;
 
 @Fallback
 public class FallbackGitHubService implements GitHubService {
@@ -14,6 +15,8 @@ public class FallbackGitHubService implements GitHubService {
     @Override
     public ProjectsDto fetchProjectsAndStars() {
         LOGGER.warn("Failed to reach GitHub, someone call them!");
-        return new ProjectsDto(Collections.emptyList());
+        return new ProjectsDto(List.of(
+                new ProjectDto("fallback", 1)
+        ));
     }
 }
